--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -122,6 +122,8 @@
 
     \subsection{Integration into models of component dynamics}
     
+
+
     Standardisation: I can talk about the scaling here. 
 
 
@@ -257,24 +259,27 @@
 
     
 \section{Methods}
+
+\textbf{Note: I've left the species / fitness nomenclature throughout and added a little sentence explaining why as I'm not sure that switching to components/performance will make it any clearer - happy to take advice on which makes more sense though}
     
     \paragraph{}
-    This framework can be applied to any dataset of interacting species which meets the following criteria: 
+    The joint model framework was initially developed for an ecological dataset where interacting species affect each other's lifetime reproductive success. As such we refer to network components or nodes as 'species' and node performance as 'lifetime reproductive success' or 'fitness' however this framework is not limited to ecological datasets and can be applied to data from interacting components (e.g. populations or groups of individuals) which meet the following criteria: 
     \begin{itemize}
-        \item observations of focal individuals record a proxy for lifetime reproductive success (e.g. seed production, stem diameter growth, above-ground biomass)
+        \item observations of focal individuals record a proxy for performance, for example seed production, biomass or stem diameter growth as a proxies for lifetime reproductive success
         \item these observations also record the identity and abundance of neighbours within the interaction neighbourhood of each focal individual
-        \item observations are spatially replicated across several individuals of each focal species
+        \item observations are spatially replicated across several individuals for each focal component or species
     \end{itemize}
-    In addition to these requirements, any experimental design or data which may reduce confounding effects between environment and competition will provide more accurate estimates of interaction strengths (e.g. thinning certain plots, recording environmental data known to affect reproductive success). 
+
+    In addition to these requirements, any experimental design or data which may reduce confounding effects between environment and competition will provide more accurate estimates of interaction effects (e.g. thinning certain plots, recording environmental data known to affect performance). 
     
     \subsection{Neighbour density-dependant model}
         
         \paragraph{}
-        We begin by implementing a neighbour density-dependant model to each focal species $i$ which regresses the identity and abundance of neighbours $j$ ($j = 1, 2, 3, ...$) against the measured proxy for lifetime reproductive success $F_{i}$:
+        We begin by implementing a neighbour density-dependant model (NDDM) to each focal species $i$ which regresses the identity and abundance of neighbours $j$ ($j = 1, 2, 3, ...$) against the measured proxy for lifetime reproductive success $F_{i}$:
         
         \begin{equation}
         F_{i} = \beta_{i0} - \sum_{i}^{j} \beta_{ij} N_{j}
-        \label{ifm}
+        \label{nddm}
         \end{equation}
         
         The intercept $\beta_{i0}$ represents intrinsic fitness, a species' fitness in the absence of interactions with neighbours. $N_{j}$ are the abundances of neighbours recorded for each observation, and the $\beta_{ij}$ represent the species-specific effect of each neighbour $j$ on $i$. Note that neighbours can include conspecifics, in which case intraspecific interactions are denoted as $\beta_{ii}$.
@@ -282,14 +287,14 @@
     \subsection{Unrealised links}
     
         \paragraph{}
-        In any given site or year, a focal species may only be observed to interact with a subset of potential interaction partners, which means the NDD model above will not be able to estimate all potential interactions ($\beta_{ij}$) between species. This is especially true for rare species. These \textit{unrealised} interactions can be estimated by using an alternative model with a different set of assumptions to the NDD model. This model is described as the response-effect model (REM) by Godoy, Kraft and Levine (2014) and assumes that each species has the same effect on all neighbours regardless of their identity, as well as the same response to competition regardless of competitor identity. 
+        In any given site or year, a focal species may only be observed to interact with a subset of potential interaction partners, which means the NDDM above will not be able to estimate all potential interactions ($\beta_{ij}$) between species. This is especially true for rare species. These \textit{unrealised} interactions can be estimated by using an alternative model with a different set of assumptions to the NDD model. This model is described as the response-effect model (here called the response-impact model or RIM) by Godoy, Kraft and Levine (2014) and assumes that each species has the same effect on all neighbours regardless of their identity, as well as the same response to competition regardless of competitor identity. 
         
         \begin{equation}
         F_{i} = \beta_{i0} - r_{i} \sum_{i}^{j} e_{j} N_{j}
-        \label{rem1}
+        \label{rim}
         \end{equation}
         
-        Pairwise interactions which are missing from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. In order to allow both the NDD and REM interaction estimates to contribute to the likelihood, we first used the NDD model to quantify observed interactions and then used those to estimate species-specific $r$ and $e$ parameters such that: 
+        Pairwise interactions which are missing from Eq. 1 can be approximated by Eq. 2 by multiplying the relevant $r_{i}$ and $e_{j}$ such that $\beta_{ij} = r_{i} e_{j}$. In order to allow both the NDDM and REM interaction estimates to contribute to the likelihood, we first used the NDDM to quantify observed interactions and then used those to estimate species-specific $r$ and $e$ parameters such that: 
     
         \begin{equation}
         r_i e_j \sim logistic \left ( \beta_{ij}, \sigma \right )
@@ -300,7 +305,7 @@
 
     \subsection{Standardising effects into per-capita interactions}
 
-        The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of species $j$ on the proxy for lifetime reproductive fitness of species $i$. Differences in the magnitude of these interaction terms may thus reflect differences in reproductive fitness, which can vary widely both between species and under different environmental conditions. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per-capita} interaction strengths \parencite{Godoy2014, Bimler2018}. The appropriate scaling is determined by writing the neighbour density-dependant model (Eq. \ref{ifm}) into a form equivalent to a Lotka-Volterra competition model: 
+        The $\beta_{ij}$ and $r_i e_j$ estimates returned by the framework describe the effect of species $j$ on the proxy for lifetime reproductive fitness of species $i$. Differences in the magnitude of these interaction terms may thus reflect differences in reproductive fitness, which can vary widely both between species and under different environmental conditions. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per-capita} interaction strengths \parencite{Godoy2014, Bimler2018}. The appropriate scaling is determined by writing the neighbour density-dependant model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
 
         \begin{equation}
         F_{i} = \beta_{i0} \left ( 1 - \sum_{i}^{j} {\beta_{ij}}'' N_{j} \right )
@@ -317,6 +322,8 @@
         where $\beta_{ij}$ can be replaced with $r_i e_j$ when appropriate. Though this scaling step is not strictly necessary, per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
 
     \subsection{Integrating species-level differences in demographic rates / Integrating interaction strengths into models of population dynamics}
+
+    \textbf{this section and the justification below still needs some work}
 
         \paragraph{}
         In certain instances, models of population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal individuals $F_i$ may not always directly translate into estimates of lifetime reproductive success due to inherent practical constraints with collecting empirical data. For example, certain life-history reproductive strategies may lead to measures of high seed production in the field which do not account for low seed or seedling survival rates post-observation. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. In this scenario, a population dynamic model can be used to translate interation effects on the measured variable into interaction strengths affecting the variable of interest.
@@ -350,7 +357,7 @@
     \subsection{Model fitting}
 
         \paragraph{}        
-        The NDD model (Eq. 1) and the REM (Eq. 2) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify \textit{realised} interactions which are then fed into the REM. We provide a working example of the STAN file used to specify and set this model to the case study below in the Supplementary Information, as well as a generalisable function in R which prepares the data and required indexing. From the model file, only the link function for $F_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. In the code given, a negative binomial distribution is used to fit seed production ($F_i$) but a different distribution may be more appropriate when using other proxies for lifetime reproductive success.   
+        The NDDM (Eq. 1) and the REM (Eqs. 2 and 3) can be implemented as generalised linear models in STAN \parencite{Carpenter2017}, a Bayesian statistical language where coefficient values will be estimated by MCMC sampling. The advantage of this approach is two-fold: the model can converge and coefficients can be estimated despite high model complexity and a large number of parameters. Using STAN requires translating the model formula into the STAN language, setting priors for parameters to be estimated, and using an indexing system to identify \textit{realised} interactions which are then fed into the REM. We provide a working example of the STAN file used to specify and set this model to the case study below in the Supplementary Information, as well as a generalisable function in R which prepares the data and required indexing. From the model file, only the link function for $F_i$ and it's parameterisation need to be modified in order to apply it to a different model or system. Additionally, non-integer measures of performance (e.g. biomass) should be redefined as real rather than integers in the data block. In the code given, a negative binomial distribution is used to fit seed production ($F_i$) but a different distribution may be more appropriate when using other proxies for lifetime reproductive success.   
 
         \paragraph{}
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. \textcite{Ellison2004} also provides an accessible review of parameter estimate and the use of posterior distributions using a worked example on ant species richness data.
@@ -376,28 +383,76 @@
         \paragraph{}
         We fit the model using R version 3.6.3, STAN and the rstan package \parencite{R2020, Carpenter2017, Rstan2020}. Estimates of seed production were fit with a negative binomial distribution. The model was run with 4 chains of 5000 iterations each, discarding the first 1000. Models were checked for convergence and traceplots were visually inspected to verify good chain behaviour and mixing. Model parameters were sampled 1000 times from the 80\% posterior confidence intervals to construct our parameter estimates. We then applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the community interaction network.
 
-        \subsection{Scaling interaction estimates into per-capita effects}
+        \subsection{A model for annual plant population dynamics}
 
         \paragraph{}
-        The above model framework returns species-specific estimates of intrinsic fitness ($\beta_{i0}$), as well as as a species x neighbour matrix of observed ($\beta_{ij}$) and unobserved ($r_i e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. Using an appropriate model of population dynamics, the raw interaction estimates can be scaled into per-capita effects (${\beta}''$) which are directly comparable between species \parencite{Godoy2014, Bimler2018}. % Note that this step depends on a population dynamic model which can link species abundance to the chosen measure of fitness, and may require species-specific measures of certain key demographic rates (e.g. mortality, seedling survival) to scale the interactions.
+        The above model framework returns species-specific estimates of intrinsic fitness ($\beta_{i0}$), as well as as a species x neighbour matrix of observed ($\beta_{ij}$) and unobserved ($r_i e_j$) interaction estimates which quantify the effects of one neighbour $j$ on the intrinsic fitness of a focal species $i$. Though useful as they are, these estimates can lead to a wider range of potential applications when integrated into models of population dynamics. For example, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. Importantly, it is necessary to specifiy a model describing population dynamics in order to draw conclusions about the effects of interactions and network structure on the maintenance of community diversity and stability. 
 
-        \paragraph{}
-        In order to determine the appropriate scaling for the interaction estimates returned by our framework, we transform the model into a form equivalent to a Lotka-Volterra competition model: 
+        \paragraph{} 
+        We defined the following model for annual plants with a seed bank \parencite{Levine2009, Mayfield2017, Bimler2018} which describe the rate of change in a focal species' \textit{i} abundance of seeds in a seed bank from one year to the next: 
+    
+            \begin{equation}
+                \frac{N_{i, t+1}}{N_{i, t}} = \left( 1 - g_{i} \right) s_{i} + g_{i}F_{i, t}
+                \label{ifm}
+            \end{equation}
+        
+        where \(F_{i,t}\) measures the number of viable seeds produced per germinated individual and is equivalent to Eq. \ref{nddm}, whilst \(g_{i}\) and \(s_{i}\) are the seed germination and seed survival rate, respectively. In a simplified case where the focal species \textit{i} interacts with only one other species \textit{j}, in this model of population dynamics \(F_{i,t}\) is given by:
+
+            \begin{equation}
+                F_{i,t} = \lambda_{i} e^{- \alpha_{ii} g_{i} N_{i, t} -  \alpha_{ij} g_{j} N_{j, t} }
+                \label{fecundity}   
+            \end{equation}
+
+        where \(\lambda_{i}\) corresponds to seed number in the absence of competition, and \(\alpha_{ii}\) and \(\alpha_{ij}\) are the interaction strengths between species \(i\) and its intraspecific and interspecific neighbours respectively. %Here it is \(\alpha_{ij} g_{j}\) and \(\alpha_{ii} g_{i}\) which are equivalent to \(\beta_{ij}\) in Eq. \ref{nddm}. 
+        We determine the scaled, per-capita interaction strengths ${\alpha}''$'s by including \(\lambda_{i}\), \(g_{i}\) and \(s_{i}\) in such a way that these variables are cancelled out when the ${\alpha}''$'s are substituted for the $\alpha$'s in our annual plant population model. 
 
         \begin{equation}
-        F_{i} = \beta_{i0} \left ( 1 - \sum_{i}^{j} {\beta_{ij}}'' N_{j} \right )
-        \label{LVform}
+            {\alpha_{ij}}'' = \frac{g_{j} \alpha_{ij}}{ln(\eta_{i})}
         \end{equation}
 
-        This gives us the scaled interaction strengths: 
+        with $\eta_{i} = \frac{\lambda_{i} g_{i}}{\theta_{i}}$ and $\theta_{i} = 1 - (1 - g_{i})(s_{i})$. % \(ln(\eta_{i})\) is thus equivalent to \(\beta_{i0}\) in Eqs. \ref{nddm} and \ref{scaling}.
+        Note that because our model evaluates the rate of change of seeds in the seed bank, 'per-capita' here refers to changes 'per seed in the seed bank' of a focal species. Substituting ${\alpha}''$'s for $\alpha$'s in Eq. \ref{ifm} gives us: 
+        
+        \begin{equation}
+            \frac{N_{i, t+1}}{N_{i, t}} = (1 - \theta_{i}) + \theta_{i} \eta_{i} e^{-ln(\eta_{i})({\alpha_{ii}}'' N_{i, t} + {\alpha_{ij}}'' N_{j, t})}
+        \end{equation}
+
+        where we can see that the ${\alpha}''$'s are directly proportional to the abundance of neighbours. Relating this population model to the joint model framework, we have: 
+
+        \begin{equation}
+        {\beta_{ij}}'' = {\alpha_{ij}}''
+        \end{equation}
+
+        \begin{equation}
+        \beta_{ij} = g_{j} \alpha_{ij}
+        \end{equation}
+
+        \begin{equation}
+        \beta_{i0}  = ln(\eta_{i}) = ln(\frac{\lambda_{i} g_{i}}{\theta_{i}})
+        \end{equation}
+
+        As we show here, the exact form of the rescaled interactions as well as intrinsic fitness can therefore vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality. In our case, because seed production in the absence of neighbours is estimated by the model framework and not directly observed, we used the mean of the $\lambda_{i}$ posterior distribution returned by our model in our scaling of the interaction coefficients.
+
+
+        % Using an appropriate model of population dynamics, the raw interaction estimates can be scaled into per-capita effects (${\beta}''$) which are directly comparable between species \parencite{Godoy2014, Bimler2018}. % Note that this step depends on a population dynamic model which can link species abundance to the chosen measure of fitness, and may require species-specific measures of certain key demographic rates (e.g. mortality, seedling survival) to scale the interactions.
+
+        % \paragraph{}
+        % In order to determine the appropriate scaling for the interaction estimates returned by our framework, we transform the model into a form equivalent to a Lotka-Volterra competition model: 
+
+        % \begin{equation}
+        % F_{i} = \beta_{i0} \left ( 1 - \sum_{i}^{j} {\beta_{ij}}'' N_{j} \right )
+        % \label{LVform}
+        % \end{equation}
+
+        % This gives us the scaled interaction strengths: 
  
-        \begin{equation}
-        {\beta_{ij}}'' = \frac{\beta_{ij}}{\beta_{i0}}
-        \label{scaling}
-        \end{equation}
+        % \begin{equation}
+        % {\beta_{ij}}'' = \frac{\beta_{ij}}{\beta_{i0}}
+        % \label{scaling}
+        % \end{equation}
 
-        \paragraph{}
-        For this case study, we adapted the framework described here to work with a well-supported annual plant population model with a seed bank \parencite{Bimler2018}. The model describes changes in the rate of a focal species' seeds in the seed bank from one year to the next, which can be linked to $F_i$ through species-specific demographic rates (equations for the annual plant model are further described in Chapter 4). The exact form of the rescaled interactions can thus vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality.
+        % \paragraph{}
+        % For this case study, we adapted the framework described here to work with a well-supported annual plant population model with a seed bank \parencite{Bimler2018}. The model describes changes in the rate of a focal species' seeds in the seed bank from one year to the next, which can be linked to $F_i$ through species-specific demographic rates (equations for the annual plant model are further described in Chapter 4). The exact form of the rescaled interactions can thus vary depending on the specific population dynamic model applied and may include other demographic rates which reflect species-level differences in growth and mortality.
 
 
 % \bibliography{../../../BibTex_files/03_Chapter3}
