addign some notes

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -68,7 +68,7 @@
 % online Methods separate
 
     \paragraph{}
-    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Quantifying these interactions from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be realised when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, though potential applications of this framework extend well beyond biological systems.}
+    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent components interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more components are included in the system, and not all interactions may be realised when some components are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual component performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, though potential applications of this framework extend beyond biological systems.}
 
 
 
@@ -84,7 +84,7 @@
     In many biological systems, interactions between various components affect each other's performance and together determine the dynamics of the whole system. In order to understand how system dynamics behave when many components are involved, such complex systems can be represented as networks where the components are nodes and linked by interactions. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002}.
 
     \paragraph{} 
-    In many systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and rarely match empirical estimates of interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+    In many systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities have rarely been found to match empirical estimates of interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
     An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenoligical and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system. Such methods can quickly become data intensive and computationally complex however as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: their components are typically unevenly abundant and distributed with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis irregardless of the role they might play. Empirically quantifying interaction matrices for diverse systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
@@ -109,14 +109,14 @@
 
     % 1 or 2 paragraphs explaining what we did (the 'method') applied to the data 
 \paragraph{}
-    To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological community, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of a component - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring components in a neighbour-density dependant model (NDDM). Increases or decreases in the overall component's performance can thus be attributed to neighbouring components which were observed to co-occur. The resulting interaction effects can be competitive or facilitative, non-symmetrical (the effect of $i$ on $j$ does not necessarily match the effect of $j$ on $i$) and include intraspecific effects (the effect of $i$ on itself). 
+    To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological community, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of a component - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring components in a neighbour-density dependant model (NDDM). [I'm thinking I should start bringing in the case study now and switch from using the word ' component' to 'species' - e.g. 'This model was applied to a dataset of a diverse annual wildflower community, where components consisted of 22 focal species and up to 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution.'] Increases or decreases in the overall component's/in an overall species' performance (here, seed production) can thus be attributed to neighbouring components/species which were observed to co-occur. The resulting interaction effects can be competitive or facilitative, non-symmetrical (the effect of $i$ on $j$ does not necessarily match the effect of $j$ on $i$) and include intraspecific effects (the effect of $i$ on itself). The shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (linear, exponential, rectangular hyperbolic) and should be carefully verified before implementation. 
 
 \paragraph{}
     Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. A rare component may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are not as likely to be found. This rare component may still however potentially interact with many of the other components in the system if given the opportunity to do so. Rather than assigning a 0 value to this unknown interaction, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we assume that unrealised interactions can be simplified such that components typically have a singular impact on and a singular response to neighbours independant of neighbour identity. An unrealised interaction is therefore the product of two components impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each component's effects on other neighbours, whilst the response and impact model (RIM) applies only to those unrealised interactions. 
 
 
 \paragraph{}
-    In order to allow a seamless integration between the NDDM and RIM and for both models to contribute to the likelihood, the joint model framework was written in the STAN programming language which uses Bayesian estimation methods. This approach is also more robust to the inclusion of many interactions without running as much risk of overparameterisation, and returns parameter estimates as distributions rather than point estimates, allowing for easy inclusion of uncertainty in the analysis of results. The joint model was applied to simulated data to verify that the original interaction parameters could be recovered by this framework (Figure ?). We then tested this method on a dataset from an annual widflower community consisting of 22 focal species and 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution. Implementing the model in STAN allowed us to estimate all 1144 interactions between focal species and neighbour, of which 40\% were unrealised. When accounting for focal species only, 13.6\% of interactions were estimated by the RIM. NDDM and RIM estimates matched well and followed similar distributions (Figure \ref{fig:adist}) as enforced by the framework. [NOTE: I haven't done the simulated data yet but will asap]
+    In order to allow a seamless integration between the NDDM and RIM and for both models to contribute to the likelihood, the joint model framework was written in the STAN programming language which uses Bayesian estimation methods. This approach is also more robust to the inclusion of many interactions without running as much risk of overparameterisation, and returns parameter estimates as distributions rather than point estimates, allowing for easy inclusion of uncertainty in the analysis of results. The joint model was applied to simulated data to verify that the original interaction parameters could be recovered by this framework (Figure ?). We then tested this method on a dataset from an annual widflower community consisting of 22 focal species and 52 neighbouring species (including focals). Seed production was used as a measure of performance and modeled with a negative binomial distribution. Implementing the model in STAN allowed us to estimate all 1144 interactions between focal species and neighbour, of which 40\% were unrealised. When accounting for focal species only, 13.6\% of interactions were estimated by the RIM. NDDM and RIM estimates matched well and followed similar distributions (Figure \ref{fig:adist}) as enforced by the framework. [NOTE: I haven't done the simulated data yet but should because reviewers will ask for it]
 
   
 
@@ -124,7 +124,15 @@
     
 
 
-    Standardisation: I can talk about the scaling here. 
+    Standardisation: I can talk about the scaling here - both the scaling to put them on the same scale, and to make predictions of dynamics. 
+
+    Interaction effects are returned by the model as distributions capturing the likely effects of neighbours on the performance of focal components. Differences in the magnitude of these interaction terms may thus reflect differences in baseline performance (performance in the absence of neighbours, either competitive or facilitative) of the focal components. The interaction terms returned by both models above can be rescaled .... 
+
+    Additionally, one may be interested in other things than lifetime reproductive success ...
+
+    And also to make predictions on other things like diversity... 
+
+    Give estimates of effect sizes - eg effect of scaled alphas on growth as percentage ?
 
 
 	\paragraph{} 
